# mirrorimage

./: CMakeLists.txt  LICENSE  README.md  main.cpp
img/: mirror_left.yuv  mirror_up.yuv
inc/: mirror.h
src/: hk_yuv420.yuv  mirror_left.cpp  mirror_upwards.cpp
